# bobbin

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml
.claude/agents/: function-design-reviewer.md  godot-developer.md  naming-reviewer.md
.github/workflows/: build-and-test.yml  build-macos.yml  release-godot-addon.yml  smoke-test.yml
bindings/godot/: Cargo.toml  build-wasm.bat
bindings/godot/.cargo/: config.toml
bindings/godot/addon/bobbin/: bobbin.gd  bobbin.gdextension
bindings/godot/addons/bobbin/: README.md  bobbin.gd
bindings/godot/src/: lib.rs
docker/: Dockerfile  build.sh
docs/adr/: 0001-compiler-architecture.md  0002-variable-state-management.md  0003-variable-modification-syntax.md  0004-variable-storage-architecture.md  0005-conditional-system.md
docs/language/: design-notes.md  grammar.md
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: bobbin.tmLanguage.json
interpreter/: Cargo.toml
interpreter/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: convert.rs  main.rs  server.rs
runtime/: Cargo.toml
runtime/src/: ast.rs  chunk.rs  compiler.rs  lib.rs  parser.rs  scanner.rs  storage.rs  vm.rs
runtime/tests/: basic.rs  choices.rs  conditionals.rs  e2e.rs  syntax.rs  variables.rs
scripts/: setup.ps1  setup.sh
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  resolver.rs
tests/godot_project/: .gitignore  export_presets.cfg  project.godot  smoke_test.gd
(+39 files in other folders)
