[package]
name = "bobbin-godot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bobbin-runtime = { path = "../../runtime" }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
# Note: Cannot use lazy-function-tables with experimental-threads (not thread-safe)
# Threads required for ResourceFormatLoader/Saver which Godot editor calls from background threads
features = [
    "api-custom",
    "experimental-wasm",
    "experimental-threads",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1
debug = 1
strip = "debuginfo"
lto = "thin"
